<resources>
    <string name="app_name">MyRA Journey</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>

    <!-- Added Strings (Do NOT remove old ones) -->
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_here">Reset Password Manually</string>
    <string name="reset_token">Reset Token</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_requirement">Password must be at least 8 characters</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="network_error">Network error. Please try again.</string>
</resources>
